--- a/tpcf_nsx/postgres.yml
+++ b/tpcf_nsx/postgres.yml
@@ -1,13 +1,4 @@
 product-name: postgres
-network-properties:
-  network:
-    name: deployment
-  other_availability_zones:
-  - name: az1
-  service_network:
-    name: services
-  singleton_availability_zone:
-    name: az1
 product-properties:
   .postgres-on-demand-broker.database:
     value: postgres
@@ -18,49 +9,63 @@ product-properties:
   .postgres-on-demand-broker.pg_user:
     value: pgadmin
   .postgres-on-demand-broker.service_instance_limit:
-    value: 20
+    value: 30
   .postgres-on-demand-broker.service_instance_sharing:
     value: false
-  .postgres-on-demand-broker.service_instance_limit:
-    value: 20
   .properties.backups_selector:
+    selected_option: disabled
     value: No Backups
   .properties.canary_org_space_selector:
+    selected_option: inactive
     value: "No"
   .properties.metrics_polling_interval:
     value: 30
   .properties.on_demand_secure_bindings_selector:
+    selected_option: disabled
     value: "No"
-  .properties.settings_services_gateway:
-    value: "Yes"
-  .properties.settings_services_gateway.enabled.tcp_fqdn:
-    value: ((tcp_fqdn))
-  .properties.syslog:
-    value: disable
   .properties.plan_collection:
     value:
     - az_multi_select:
-      - az1
-      az_multi_select_monitor:
       - az1
       cf_service_access: enable
       configured_plan_id: null
       description: This plan provides a test on-demand postgres instance, tailored
         for caching use-cases with persistence to disk enabled
-      disk_size: "10240"
+      disk_size: null
       ha_enabled: false
-      instance_limit: 20
+      instance_limit: 30
       maxclients: 1000
       name: on-demand-postgres-db
+      smoke_test: false
       tcp_keepalive: 60
       timeout: 3600
       tls_enabled: false
       vm_type: medium
+  .properties.settings_services_gateway:
+    selected_option: disabled
+    value: "No"
+  .properties.settings_shareable_instances:
+    selected_option: disabled
+    value: "No"
+  .properties.syslog:
+    selected_option: disable
+    value: disable
+network-properties:
+  network:
+    name: deployment
+  other_availability_zones:
+  - name: az1
+  service_network:
+    name: services
+  singleton_availability_zone:
+    name: az1
 resource-config:
   postgres-on-demand-broker:
     max_in_flight: 100%
     additional_networks: []
     additional_vm_extensions: []
+    avi:
+      pools: []
     instance_type:
       id: automatic
     instances: automatic
@@ -70,6 +75,21 @@ resource-config:
       ns_groups: []
       vif_type: null
     swap_as_percent_of_memory_size: automatic
+errand-config:
+  delete-all-service-instances-and-deregister-broker:
+    pre-delete-state: true
+  orphan-deployments:
+    post-deploy-state: false
+  recreate-all-service-instances:
+    post-deploy-state: false
+  register-broker:
+    post-deploy-state: true
+  s3-upload-test:
+    post-deploy-state: true
+  smoke-tests:
+    post-deploy-state: true
+  upgrade-all-service-instances:
+    post-deploy-state: true
 syslog-properties:
   address: null
   custom_rsyslog_configuration: null
@@ -82,16 +102,3 @@ syslog-properties:
   ssl_ca_certificate: null
   tls_enabled: false
   transport_protocol: tcp
-errand-config:
-  delete-all-service-instances-and-deregister-broker:
-    pre-delete-state: true
-  orphan-deployments:
-    post-deploy-state: false
-  recreate-all-service-instances:
-    post-deploy-state: false
-  register-broker:
-    post-deploy-state: true
-  s3-upload-test:
-    post-deploy-state: false
-  upgrade-all-service-instances:
-    post-deploy-state: true
